--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   package_info: ^0.4.0+4
   url_launcher: ^5.0.3
   get_it: ^1.0.3+2
+  sensors: ^2.0.0
 
 dev_dependencies:
   flutter_test:
